# seqwho

./: .gitignore  README.md  _config.yml  base_conda.yml  environment.yml  full_conda.yml  seqwho.py  seqwho_buildindex.py  seqwho_modules.py  setup.cfg
_pages/: about.md  manual.md  seqwho.md
_posts/: 2021-03-01-bennett.md
_sass/base/: _variables.scss
scripts/: SRA_filter.py  downloadSRA.py  ex6.nf  intriduceLabelError.py  parseSRA.sh  randomizeReads.py
seqwho_lib/: __init__.py  seqwho.py  seqwho_buildindex.py  seqwho_modules.py
test/: verify_seqwho_install.sh
