[metadata]
name = seqwho 
version = 1.0.3
author = Christopher Bennett
author_email= christopher.bennett@dshelix.net
description = Rapid and accurate classification of FASTQ(A) sequence files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://daehwankimlab.github.io/seqwho
project_urls =
    Bug Tracker = https://github.com/DaehwanKimLab/Seqwho/issues
    Documentation = https://daehwankimlab.github.io/seqwho/manual
    Source Code = https://github.com/DaehwanKimLab/Seqwho
license = MIT

[options]
packages = find:
python_requires = >=3.7

include_package_data=True
install_requires = 
    joblib
	numpy
	pandas
	seaborn
	matplotlib
	scikit-learn
[options.entry_points]
console_scripts =
    seqwho.py = seqwho_lib.seqwho:main
	seqwho_buildindex.py = seqwho_lib.seqwho_buildindex:main
