[metadata]
name = seqwho 
version = 1.0.3
author = Christopher Bennett
author_email= christopher.bennett@dshelix.net
description = Rapid and accurate classification of FASTQ(A) sequence files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://daehwankimlab.github.io/seqwho
project_urls =
    Bug Tracker = https://github.com/DaehwanKimLab/Seqwho/issues
    Documentation = https://daehwankimlab.github.io/seqwho/manual
    Source Code = https://github.com/DaehwanKimLab/Seqwho
license = MIT

[options]
packages = find:
python_requires = >=3.7

include_package_data=True
install_requires = 
    joblib==0.13.2
	numpy==1.17.2
	pandas==0.25.1
	seaborn==0.9.0
	matplotlib==3.1.1
	scikit-learn==0.21.3
[options.entry_points]
console_scripts =
    seqwho.py = seqwho_lib.seqwho:main
	seqwho_buildindex.py = seqwho_lib.seqwho_buildindex:main
